# Robot-Cleaner

./: 2_docking_station.error  CMakeLists.txt  Known Issues Ex3- 209228600_.xlsx  KnownIssues  README.md  all_house_0_no_walls.error  all_house_0_with_walls-Algo_209228600_A.txt  all_house_0_with_walls-Algo_209228600_B.txt  allowed_steps_1_battery_steps_not_1-Algo_209228600_A.txt  can_use_total_steps_1-Algo_209228600_A.txt  can_use_total_steps_1-Algorithm_D.txt  can_use_total_steps_2-Algo_209228600_A.txt  can_use_total_steps_3-Algo_209228600_B.txt  check_if_end_in_station_1-Algo_209228600_A.txt  check_if_used_all_number_of_steps_3-Algo_209228600_B.txt  cout.txt  diffrent_row_sizes-Algorithm_D.txt  error_log.txt  example_1-Algo_209228600_C.txt  example_1-Algorithm_D.txt  example_2-Algo_209228600_A.txt  example_2-Algo_209228600_B.txt  example_2-Algorithm_D.txt  example_400-Algo_209228600_A.txt  example_400-Algo_209228600_B.txt  example_400-Algo_209228600_C.txt  example_400-Algorithm_D.txt  example_400_unreachable-Algo_209228600_A.txt  example_400_unreachable-Algo_209228600_B.txt  example_out-Algo_209228600_A.txt  example_out.house  general_house_1-Algo_209228600_A.txt  general_house_1-Algo_209228600_B.txt  general_house_1-Algorithm_D.txt  general_house_2-Algo_209228600_B.txt  general_house_2-Algorithm_D.txt  house-Algo_209228600_A.txt  house-Algo_209228600_B.txt  house-Algorithm_D.txt  house_1-Algo_209228600_B.txt  (+53 more)
Algo_209228600_A/: Algo_209228600_A.cpp  Algo_209228600_A.h  CMakeLists.txt  MakeFile
Algo_209228600_A/include/: Algo_209228600_A.h  house_mapping_graph.h  house_mapping_graph_A.h  vertex.h
Algo_209228600_A/src/: Algo_209228600_A.cpp  HouseMappingGraph.cpp  HouseMappingGraphA.cpp
Algo_209228600_B/: CMakeLists.txt
Algo_209228600_B/include/: Algo_209228600_B.h  house_mapping_graph_B.h
Algo_209228600_B/src/: Algo_209228600_B.cpp  HouseMappingGraphB.cpp
Algo_209228600_C/: CMakeLists.txt
Algo_209228600_C/include/: Algo_209228600_C.h  house_mapping_graph_c.h
Algo_209228600_C/src/: Algo_209228600_C.cpp  HouseMappingGraphC.cpp
Algorithm_D/: CMakeLists.txt
Algorithm_D/include/: Algorithm_D.h  house_mapping_graph.h
Algorithm_D/src/: Algorithm_D.cpp  HouseMappingGraph.cpp
algorithm/: AlgorithmRegistration.h
another_houses/: all_house_0_no_walls.house  allowed_steps_1_battery_steps_1.house  allowed_steps_not_1_battery_steps_1.house  can_use_total_steps_1.house  can_use_total_steps_3.house  check_if_end_in_station_1.house  example_2.house  example_400_unreachable.house  general_house_2.house  large_parameters.house  stuck_dirt.house
bonus/visualSimulation/: visual_simulation.py
checkSingleHouse/: house.house
common/: AbstractAlgorithm.h  AlgorithmRegistrar.h  BatteryMeter.h  WallSensor.h
common_algorithm/include/: common_enums.h  configuration_manager.h  error_manager.h  house.h  house_mapping_graph.h  input_manager.h  logger.h  my_algorithm.h  output_manager.h  robot_battery_meter.h  robot_dirt_sensor.h  robot_sensor.h  robot_walls_sensor.h  vertex.h  visual_simulation.h  visualisation_configuration_manager.h
common_algorithm/src/: Common.cpp  ConfigurationManager.cpp  ErrorManager.cpp  House.cpp  HouseMappingGraph.cpp  InputManager.cpp  Logger.cpp  MyAlgorithm.cpp  OutputManager.cpp  RobotBatteryMeter.cpp  RobotDirtSensor.cpp  RobotSensor.cpp  Vertex.cpp  VisualConfigManager.cpp  VisualSimulation.cpp
config/: check.txt  config.json  visualisation_config.json
enums/: common_enums.h
houses/: allowed_steps_1_battery_steps_not_1.house  can_use_total_steps_2.house  check_if_used_all_number_of_steps_3.house  example_1.house  house_1.house  house_2.house  house_3.house  stuck_robot.house
include/: abstract_algorithm.h  common.h  robot_battery_meter.h  robot_walls_sensor.h  visual_simulation.h
input_validation/: 0_docking_station.house  2_docking_station.house  diffrent_row_sizes.house  invalid_char.house  invalid_parameter_format.house  negative_parameter_1.house  negative_parameter_2.house  negative_parameter_3.house  no_house.house  output_diffrent_row_sizes.house
inputs/: 0_docking_station.house  2_docking_station.house  all_house_0_with_walls.house  can_use_total_steps_1.house  can_use_total_steps_3.house  house_1.house  house_2.house  house_3.house  input_allchars.house  input_filledcol.house  input_immediatefinish.house  input_invparam.house  input_maze.house  input_mockalgo_dead.house  input_nodock.house  input_nohouse.house  input_trappeddirt.house  invalid_char.house  negative_parameter_1.house  negative_parameter_3.house  no_house.house  stuck_dirt.house  stuck_robot.house
inputs/another_houses/: all_house_0_no_walls.house  allowed_steps_1_battery_steps_1.house  allowed_steps_1_battery_steps_not_1.house  allowed_steps_not_1_battery_steps_1.house  can_use_total_steps_2.house  check_if_end_in_station_1.house  check_if_end_in_station_2.house  check_if_used_all_number_of_steps_3.house  example_2.house  example_400_unreachable.house  general_house_2.house  large_parameters.house
inputs/houses/: example_400.house  general_house_1.house
inputs/input_validation/: diffrent_row_sizes.house  invalid_parameter_format.house  negative_parameter_2.house  no_parameters.house
inputs/largeInputs/: house.house
inputs/moreHouses/: input_distantdirt.house  input_dupdock.house  input_filledline.house  (+7 more)
kownIssues/: HouseMappingGraph.cpp  SmartFunctions.txt
simulator/: AlgorithmRegistrar.cpp  CMakeLists.txt  CsvManager.cpp  MainManager.cpp  MakeFile  MySimulator.cpp  SimConfigManager.cpp  Task.cpp  ThreadPool.cpp  main.cpp
simulator/include/: MainManager.h  configuration_manager.h  csv_manager.h  house.h  house_mapping_graph.h  logger.h  my_algorithm.h  my_simulator.h  output_manager.h  robot_dirt_sensor.h  robot_sensor.h  sim_config_manager.h  task.h  thread_pool.h  vertex.h
src/: Common.cpp  ConfigurationManager.cpp  House.cpp  HouseMappingGraph.cpp  Logger.cpp  MyAlgorithm.cpp  MySimulator.cpp  OutputManager.cpp  RobotBatteryMeter.cpp  RobotDirtSensor.cpp  RobotSensor.cpp  RobotWallsSensor.cpp  Vertex.cpp  VisualSimulation.cpp  main.cpp
